# divi_quark_hash

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
docs/: ALGORITHM.md  CONTRIBUTING.md
include/quark/: quark.h
sha3/: groestl.c
src/bindings/: python_module.c
src/core/: constants.h  hash_step.c  hash_step.h  quark_algorithm.c  quark_algorithm.h
tests/: conftest.py  test_quark_hash.py
