[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "divi-quark-hash"
version = "1.0.0"
description = "Divi Quark hash for proof-of-work verification."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "TheVoice" }]
requires-python = ">=3.8"
keywords = ["divi", "quark", "hash", "cryptocurrency", "proof-of-work"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: C",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
Homepage = "https://github.com/7h3v01c3/divi_quark_hash"
Source = "https://github.com/7h3v01c3/divi_quark_hash"
